# comp4703-ssh-ipykernel

./: setup.cfg
comp4703-ssh-ipykernel/: kernel.json
src/comp4703_ssh_ipykernel/: __init__.py  __main__.py  kernel.py
