[metadata]
# replace with your username:
name = comp4703-ssh-ipykernel
version = 1.0.0
author = Alex Wilson
author_email = alex@uq.edu.au
description = Jupyter kernel for remotely running an ipykernel on a transparent SSH proxy cluster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eait-itig/comp4703-ssh-ipykernel
project_urls =
    Bug Tracker = https://github.com/eait-itig/comp4703-ssh-ipykernel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests
    cachetools
    zmq
    tornado
    aiozmq

[options.packages.find]
where = src

